src/objects/Financials__c.object
<CustomObject>
    <fields>
        <fullName>Chart_of_Accounts_AccId__c</fullName>
        <formula>Chart_of_Accounts__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chart of Accounts AccId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_of_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chart of Accounts</label>
        <referenceTo>Chart_of_Accounts__c</referenceTo>
        <relationshipLabel>Financials</relationshipLabel>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Period</label>
        <referenceTo>Report_Period__c</referenceTo>
        <relationshipLabel>Financials</relationshipLabel>
        <relationshipName>Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Financials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Financials  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>